# azureretailprices-exporter

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  azureapi.py  export_fxrates.py  export_prices_all_eur.py  export_prices_all_json.py  export_prices_all_usd.py  export_prices_all_usd_json.py  export_prices_all_usd_json_limit_10_pages.py  export_prices_all_usd_limit_10_pages.py  export_prices_flatten_all_usd.py  export_prices_flatten_all_usd_limit_10_page.py  export_prices_flatten_all_usd_limit_10_pages.py  export_prices_flatten_with_filter_and_multiple_currencies.py  export_prices_vm_usd.py  export_prices_with_filter_and_multiple_currencies.py  pyproject.toml
.github/: copilot-instructions.md  copilot.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  export-prices.yml  quality.yml  release.yml
api/: azureapi.py  flatten.py
api/tests/: test_azureapi.py
xlsx/: retail_prices_flatten.xlsx
