[tool.poetry]
name = "azureretailprices-exporter"
version = "0.1.0"
description = "Export Azure Retail Prices as JSON and convert them to CSV"
authors = ["https://github.com/sbroenne/azureretailprices-exporter"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "*"
requests = "*"
requests-cache = "*"
enlighten = "*"
pyarrow = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.9.0"
ruff = "^0.14.0"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["api", "*.py"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
pythonVersion = "3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"