[project]
name = "azureretailprices-exporter"
version = "0.1.0"
description = "Export Azure Retail Prices as JSON and convert them to CSV"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "sbroenne"}]
dependencies = [
    "pandas",
    "requests",
    "requests-cache",
    "enlighten",
    "pyarrow",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.14.14,<0.16.0",
    "pyright>=1.1.408,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
include = ["api", "*.py"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
pythonVersion = "3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
